--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/ImageGalleryPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/ImageGalleryPage.xaml
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                xmlns:customRenders="clr-namespace:DementiaHelper.Renders.CustomControlRenders;assembly=DementiaHelper"
+             xmlns:i18n="clr-namespace:DementiaHelper.Extensions;assembly=DementiaHelper"
+             xmlns:customRenders="clr-namespace:DementiaHelper.Renders.CustomControlRenders;assembly=DementiaHelper"
+             x:Name="ThePage"
+             Title="{i18n:Translate ImageGalleryTitle}"
              x:Class="DementiaHelper.Pages.ImageGalleryPage">
     <ContentPage.Content>
         <Grid>
@@ -20,8 +23,8 @@
 				Source="{Binding PreviewImage}"
 				Grid.Row="0">
             </Image>
-            <customRenders:CustomImageGallery
-				ItemsSource="{Binding Images}"
+            <customRenders:CustomImageGallery  
+				ItemsSource="{Binding Images}" 
 				Grid.Row="1">
                 <customRenders:CustomImageGallery.ItemTemplate>
                     <DataTemplate>
