--- a/DementiaHelper/DementiaHelper/DementiaHelper.Droid/Resources/layout/Tabbar.axml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper.Droid/Resources/layout/Tabbar.axml
@@ -4,7 +4,7 @@
     android:id="@+id/sliding_tabs"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/black"
+    android:background="#1E88E5"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     app:tabIndicatorColor="@android:color/white"
     app:tabGravity="fill"
