--- a/DementiaHelper/DementiaHelper/DementiaHelper.Droid/Resources/layout/Toolbar.axml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper.Droid/Resources/layout/Toolbar.axml
@@ -1,9 +1,8 @@
-<android.support.v7.widget.Toolbar
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#0099cc"
+    android:background="#1E88E5"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
