--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/CitizenHomePage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/CitizenHomePage.xaml
@@ -2,13 +2,15 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DementiaHelper.Pages.CitizenHomePage"
-             Title="Idag">
+             xmlns:i18n="clr-namespace:DementiaHelper.Extensions;assembly=DementiaHelper"
+             Title="{i18n:Translate CitizenHomeTitle}">
 
     <StackLayout Orientation="Vertical">
         <StackLayout Spacing="0" Padding="3" Orientation="Horizontal">
-            <Label FontSize="Large" Text="{Binding CurrentTime.DayOfWeek}"></Label>
+            <Label FontSize="Large" Text="{Binding Weekday}"></Label>
             <Label FontSize="Large" Text=" d. "></Label>
             <Label FontSize="Large" Text="{Binding CurrentTime.Day}" x:Name="yourLabel"></Label>
+            <Label FontSize="Large" Text="{Binding Month}" ></Label>
             <Label FontSize="Large" Text=" kl. "></Label>
             <Label FontSize="Large" Text="{Binding CurrentTime.Hour}"></Label>
             <Label FontSize="Large" Text=":"></Label>
@@ -16,10 +18,6 @@
         </StackLayout>
         <Label FontSize="Medium"  Text="Næste aftale:"></Label>
         <Label FontSize="Medium" Text="{Binding Appointment.Subject}"></Label>
-        
-    </StackLayout>
-    
-    
 
-  
+    </StackLayout>
 </ContentPage>
