--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/CreateCalenderAppointmentPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/CreateCalenderAppointmentPage.xaml
@@ -9,60 +9,11 @@
     <ContentPage.Resources>
         <ResourceDictionary>
             <Style x:Key="LabelStyle" TargetType="Label">
-                    
+
             </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
-
-
     <ContentPage.Content>
-
-            <!--<Grid  VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" ></ColumnDefinition>
-                <ColumnDefinition Width="*" ></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-                <Grid Grid.Column='0' Grid.ColumnSpan="2">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="*"></RowDefinition>
-                        <RowDefinition Height="*"></RowDefinition>
-                        <RowDefinition Height="*"></RowDefinition>
-                        <RowDefinition Height="*"></RowDefinition>
-                        <RowDefinition Height="*"></RowDefinition>
-                        <RowDefinition Height="*"></RowDefinition>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" ></ColumnDefinition>
-                        <ColumnDefinition Width="*" ></ColumnDefinition>
-                        <ColumnDefinition Width="*" ></ColumnDefinition>
-                        <ColumnDefinition Width="*" ></ColumnDefinition>
-                        <ColumnDefinition Width="*" ></ColumnDefinition>
-                        <ColumnDefinition Width="*" ></ColumnDefinition>
-                        <ColumnDefinition Width="*" ></ColumnDefinition>
-                        <ColumnDefinition Width="*" ></ColumnDefinition>
-                    </Grid.ColumnDefinitions>
-
-                    <Label x:Name="DateLabel" Text="Dato:" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4"></Label>
-                    <DatePicker x:Name="DateDatepicker" Grid.Row="1" Grid.Column="4" Grid.ColumnSpan="3" Date="{Binding Date}" MinimumDate="01/01/2017" MaximumDate="12/31/2030"></DatePicker>
-
-                    <Label x:Name="DateStartTimeLabel" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="4" Text="Starttidspunkt:"></Label>
-                    <TimePicker  x:Name="DateStartTimeTimePicker" Grid.Row="2" Grid.Column="4" Grid.ColumnSpan="3" Format="HH:mm" Time="{Binding AppointmentStartTimeSpan}"></TimePicker>
-                    <Label x:Name="DateEndTimeLabel" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="4" Text="Sluttidspunkt:"></Label>
-                    <TimePicker  x:Name="DateEndTimeTimePicker" Grid.Row="3" Grid.Column="4" Grid.ColumnSpan="3" Format="HH:mm" Time="{Binding AppointmentEndTimeSpan}"></TimePicker>
-                    <Label x:Name="ColorLabel" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="4" Text="Farve:"></Label>
-                    <Picker x:Name="ColorPicker"  Grid.Row="4" Grid.Column="4" Grid.ColumnSpan="3" Title="Farve" ItemsSource="{Binding ColorList}" ></Picker>
-                    --><!--<Label x:Name="DescriptionLabel"  Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="5"  Text="Beskrivelse af begivenheden:"></Label>
-                    <StackLayout x:Name="EditorStacklayout" Grid.Row="6" Grid.RowSpan="3"  Grid.Column="1" Grid.ColumnSpan="6" BackgroundColor="#0099cc" Padding="1">
-                        <Editor BackgroundColor="White" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"  Text="{Binding Description}"></Editor>
-                    </StackLayout>-->
-                    <!--<Button x:Name="CreateAppointmentButton" Text="Opret begivenhed" Style="{StaticResource buttonStyle}" Command="{Binding CreateAppointmentCommand}" Grid.Row="9" Grid.Column="1" Grid.ColumnSpan="6"></Button>
-                    <Button x:Name="CancelCreateAppointmentButton" Text="{i18n:Translate Cancel}" Command="{Binding CancelCreateAppointmentCommand}"  Grid.Row="10" Grid.Column="1" Grid.ColumnSpan="6"></Button>--><!--
-                </Grid>
-            </Grid>-->
         <Grid x:Name="outerGrid">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
@@ -115,8 +66,8 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <Button x:Name="CancelCreateAppointmentButton" Text="{i18n:Translate Cancel}" Command="{Binding CancelCreateAppointmentCommand}" Grid.Column="0" />
-                <Button  x:Name="CreateAppointmentButton" Text="Opret begivenhed" Style="{StaticResource buttonStyle}" Command="{Binding CreateAppointmentCommand}" Grid.Column="1" />
+                <customRenders:CustomButtonRender x:Name="CancelCreateAppointmentButton" Text="{i18n:Translate Cancel}" Style="{StaticResource CancelButtonStyle}" Command="{Binding CancelCreateAppointmentCommand}" Grid.Column="0" />
+                <customRenders:CustomButtonRender  x:Name="CreateAppointmentButton" Text="Opret begivenhed" Style="{StaticResource ButtonStyle}" Command="{Binding CreateAppointmentCommand}" Grid.Column="1" />
             </Grid>
         </Grid>
 
