--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/EditAccountInformationPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/EditAccountInformationPage.xaml
@@ -1,18 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:extensions="clr-namespace:DementiaHelper.Extensions;assembly=DementiaHelper"
+             xmlns:i18n="clr-namespace:DementiaHelper.Extensions;assembly=DementiaHelper"
+             xmlns:customRenders="clr-namespace:DementiaHelper.Renders.CustomControlRenders;assembly=DementiaHelper"
              x:Class="DementiaHelper.Pages.EditAccountInformationPage"
+             Title="{i18n:Translate EditProfileTitle}"
              BackgroundColor="White">
-
-    <ScrollView>
+    <ScrollView >
         
         <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Margin="0" Padding="0">
             <StackLayout VerticalOptions="Start">
-                <Label Text="{extensions:Translate EditProfile}" HorizontalOptions="Center" FontSize="16"></Label>
-                <!--{Binding User.FirstName, StringFormat='{0:N}s oplysninger'} Skal måske bruge dette senere-->
             </StackLayout>
-
             <Grid ColumnSpacing="5">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
@@ -37,36 +35,36 @@
                 </Grid.ColumnDefinitions>
 
 
-                <Label Text="{extensions:Translate PersonalDetails}" VerticalOptions="End" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="4"></Label>
+                <Label Text="{i18n:Translate PersonalDetails}" VerticalOptions="End" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="4"></Label>
 
                 <!--This is used as a seperator line in the grid-->
                 <BoxView HeightRequest="1" BackgroundColor="Black" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4"/>
 
-                <Label Text="{extensions:Translate FirstName}" VerticalOptions="Center" Grid.Row="2" Grid.Column="1"></Label>
+                <Label Text="{i18n:Translate FirstName}" VerticalOptions="Center" Grid.Row="2" Grid.Column="1"></Label>
                 <Entry Text="{Binding User.FirstName}" Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
 
-                <Label Text="{extensions:Translate LastName}" VerticalOptions="Center" Grid.Row="3" Grid.Column="1"></Label>
+                <Label Text="{i18n:Translate LastName}" VerticalOptions="Center" Grid.Row="3" Grid.Column="1"></Label>
                 <Entry Text="{Binding User.LastName}" Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
 
-                <Label Text="{extensions:Translate Description}" VerticalOptions="Center" Grid.Row="4" Grid.Column="1"></Label>
+                <Label Text="{i18n:Translate Description}" VerticalOptions="Center" Grid.Row="4" Grid.Column="1"></Label>
                 <Editor Text="{Binding User.Description}" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="3"></Editor>
 
 
 
-                <Label Text="{extensions:Translate ContactDetails}" VerticalOptions="End" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="4"></Label>
+                <Label Text="{i18n:Translate ContactDetails}" VerticalOptions="End" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="4"></Label>
 
                 <!--This is used as a seperator line in the grid-->
                 <BoxView HeightRequest="1" BackgroundColor="Black" Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="4"/>
 
-                <Label Text="{extensions:Translate Email}" VerticalOptions="Center" Grid.Row="7" Grid.Column="1"></Label>
+                <Label Text="{i18n:Translate Email}" VerticalOptions="Center" Grid.Row="7" Grid.Column="1"></Label>
                 <Entry Text="{Binding User.Email}" Grid.Row="7" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
 
-                <Label Text="{extensions:Translate Phone}" VerticalOptions="Center" Grid.Row="8" Grid.Column="1"></Label>
+                <Label Text="{i18n:Translate Phone}" VerticalOptions="Center" Grid.Row="8" Grid.Column="1"></Label>
                 <Entry Text="{Binding User.Phone}" Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
 
 
 
-                <Label Text="{extensions:Translate Picture}" VerticalOptions="End" Grid.Row="9" Grid.Column="1" Grid.ColumnSpan="4"></Label>
+                <Label Text="{i18n:Translate Picture}" VerticalOptions="End" Grid.Row="9" Grid.Column="1" Grid.ColumnSpan="4"></Label>
 
                 <!--This is used as a seperator line in the grid-->
                 <BoxView HeightRequest="1" BackgroundColor="Black" Grid.Row="10" Grid.Column="1" Grid.ColumnSpan="4"/>
@@ -75,12 +73,21 @@
 
             </Grid>
             <StackLayout VerticalOptions="Start" Orientation="Vertical">
-                <Button Text="{extensions:Translate Save}" Command="{Binding SaveCommand}"></Button>
-                <Button Text="{extensions:Translate Cancel}" Command="{Binding CancelCommand}"></Button>
+
+                <Grid x:Name="buttonsGrid" Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <customRenders:CustomButtonRender Text="{i18n:Translate Cancel}" Style="{StaticResource CancelButtonStyle}" Command="{Binding CancelCommand}" Grid.Column="0" />
+                    <customRenders:CustomButtonRender Text="{i18n:Translate Save}" Style="{StaticResource ButtonStyle}" Command="{Binding SaveCommand}" Grid.Column="1" />
+                </Grid>
+
             </StackLayout>
         </StackLayout>
 
         
 
     </ScrollView>
+        
 </ContentPage>
