--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/LoginPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/LoginPage.xaml
@@ -14,6 +14,17 @@
                 <Setter Property="BorderColor" Value="#0099cc" />
                 <Setter Property="BorderRadius" Value="5" />
                 <Setter Property="BorderWidth" Value="5" />
+                <Setter Property="Margin" Value="10,0,10,5"/>
+            </Style>
+            <Style x:Key="FacebookButtonStyle" TargetType="Button">
+                <Setter Property="BackgroundColor" Value="#3b5998"/>
+                <Setter Property="TextColor" Value="White" />
+                <Setter Property="Margin" Value="10,0,10,5"/>
+            </Style>
+            <Style x:Key="GoogleButtonStyle" TargetType="Button">
+                <Setter Property="BackgroundColor" Value="#d62d20"/>
+                <Setter Property="TextColor" Value="White" />
+                <Setter Property="Margin" Value="10,0,10,5"/>
             </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
@@ -31,14 +42,20 @@
                         </StackLayout>
                     </StackLayout>
                     <StackLayout Orientation="Vertical" Spacing="0"  VerticalOptions="CenterAndExpand" >
-                        <customRenders:FacebookButtonCustomRenderer  Style="{StaticResource buttonStyle}" HeightRequest="40"  Command="{Binding LoginCommand}" Text="{i18n:Translate Login}" />
-                        <customRenders:FacebookButtonCustomRenderer  Style="{StaticResource ForgotPasswordButtonStyle}" HeightRequest="40"  Text="{i18n:Translate ForgotPassword}" />
+                        <customRenders:CustomButtonRender  Style="{StaticResource ButtonStyle}" HeightRequest="40"  Command="{Binding LoginCommand}" Text="{i18n:Translate Login}" />
+                        <customRenders:CustomButtonRender  Style="{StaticResource ForgotPasswordButtonStyle}" HeightRequest="40"  Text="{i18n:Translate ForgotPassword}" />
                     </StackLayout>
 
                     <StackLayout Orientation="Vertical" Spacing="0" VerticalOptions="End">
-                        <customRenders:FacebookButtonCustomRenderer  HeightRequest="40"  Style="{StaticResource buttonStyle}" Command="{Binding GoToCreateAccountCommand}" Text="{i18n:Translate CreateNewAccount}" />
-                        <customRenders:FacebookButtonCustomRenderer HeightRequest="40"  TextColor="White" Text="{i18n:Translate LoginWithFacebook}" />
-                        <customRenders:GoogleButtonCustomRender HeightRequest="40"  TextColor="White" Text="{i18n:Translate LoginWithGoogle}" />
+                        <customRenders:CustomButtonRender  HeightRequest="40"  Style="{StaticResource ButtonStyle}" Command="{Binding GoToCreateAccountCommand}" Text="{i18n:Translate CreateNewAccount}" />
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <customRenders:CustomButtonRender Grid.Column="0" Style="{StaticResource FacebookButtonStyle}"  HeightRequest="40"  TextColor="White" Text="{i18n:Translate LoginWithFacebook}" />
+                            <customRenders:CustomButtonRender Grid.Column="1" Style="{StaticResource GoogleButtonStyle}" HeightRequest="40"  TextColor="White" Text="{i18n:Translate LoginWithGoogle}" />
+                        </Grid>
                     </StackLayout>
                 </StackLayout>
             </OnIdiom.Phone>
@@ -55,7 +72,7 @@
                         <StackLayout VerticalOptions="CenterAndExpand">
                             <Entry BackgroundColor="#00A8C8" Text="{Binding Email}" Placeholder="{i18n:Translate Email}" HorizontalOptions="CenterAndExpand" />
                             <Entry BackgroundColor="#00A8C8" Text="{Binding Password}" IsPassword="true"  Placeholder="{i18n:Translate Password}" HorizontalOptions="CenterAndExpand" />
-                            <Button HorizontalOptions="CenterAndExpand" Command="{Binding LoginCommand}" Text="{i18n:Translate Login}" />
+                            <Button HorizontalOptions="CenterAndExpand" Style="{StaticResource ButtonStyle}" Command="{Binding LoginCommand}" Text="{i18n:Translate Login}" />
                             <StackLayout Orientation="Horizontal" Spacing="2">
                                 <Label HorizontalOptions="EndAndExpand" TextColor="Blue" Text="New account">
                                     <Label.GestureRecognizers>
@@ -70,8 +87,8 @@
                             </StackLayout>
                         </StackLayout>
                         <StackLayout Orientation="Vertical" Spacing="0" VerticalOptions="End">
-                            <customRenders:FacebookButtonCustomRenderer HorizontalOptions="CenterAndExpand" TextColor="White" Text="{i18n:Translate LoginWithFacebook}" />
-                            <customRenders:GoogleButtonCustomRender HorizontalOptions="CenterAndExpand" TextColor="White" Text="{i18n:Translate LoginWithGoogle}" />
+                            <customRenders:CustomButtonRender Style="{StaticResource FacebookButtonStyle}"  HorizontalOptions="CenterAndExpand" TextColor="White" Text="{i18n:Translate LoginWithFacebook}" />
+                            <customRenders:CustomButtonRender Style="{StaticResource GoogleButtonStyle}" HorizontalOptions="CenterAndExpand" TextColor="White" Text="{i18n:Translate LoginWithGoogle}" />
                         </StackLayout>
                     </StackLayout>
                 </Grid>
