--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/AccountInformationPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/AccountInformationPage.xaml
@@ -7,9 +7,9 @@
              BackgroundColor="White"
              Title="{i18n:Translate AccountInformationTitle}">
 
-   
-        <StackLayout>
-            <ScrollView>
+
+    <StackLayout>
+        <ScrollView>
                 <Grid ColumnSpacing="5">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
@@ -36,7 +36,7 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-
+                
 
                 <Label Font="Bold" Text="{i18n:Translate PersonalDetails}" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4"></Label>
             
@@ -52,9 +52,10 @@
                 <Label Text="{i18n:Translate Description}" Grid.Row="5" Grid.Column="1"></Label>
             <Label Text="{Binding User.Description}" Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="3"></Label>
 
+                <Label Text="Citizen Id:" IsVisible="{Binding IsCitizen}"  Grid.Row="6" Grid.Column="1"></Label>
+                <Label Text="{Binding CitizenId}" IsVisible="{Binding IsCitizen}" Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="3"></Label>
 
-
-                <Label Text="{i18n:Translate ContactDetails}" Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="4"></Label>
+                <Label  Font="Bold" Text="{i18n:Translate ContactDetails}" Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="4"></Label>
 
             <!--This is used as a seperator line in the grid-->
             <BoxView HeightRequest="1" BackgroundColor="Black" Grid.Row="8" Grid.Column="1" Grid.ColumnSpan="4"/>
@@ -67,7 +68,7 @@
 
 
 
-                <Label Text="{i18n:Translate Picture}" Grid.Row="12" Grid.Column="1" Grid.ColumnSpan="4"></Label>
+                <Label  Font="Bold" Text="{i18n:Translate Picture}" Grid.Row="12" Grid.Column="1" Grid.ColumnSpan="4"></Label>
 
             <!--This is used as a seperator line in the grid-->
             <BoxView HeightRequest="1" BackgroundColor="Black" Grid.Row="13" Grid.Column="1" Grid.ColumnSpan="4"/>
