--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/ConnectToCitizenPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/ConnectToCitizenPage.xaml
@@ -19,19 +19,18 @@
                     </StackLayout>
                     <StackLayout x:Name="secondInnerStack" VerticalOptions="CenterAndExpand">
                         <StackLayout Margin="10" Padding="1" BackgroundColor="#0099cc">
-                            <Entry BackgroundColor="White" Placeholder="{i18n:Translate CitizenId}" ></Entry>
+                            <Entry BackgroundColor="White" Placeholder="{i18n:Translate CitizenId}" Text="{Binding CitizenId}" ></Entry>
                         </StackLayout>
 
                         <Label  Margin="10" TextColor="#0099cc" Font="Bold" Text="Indtast dement id, se Idet i den dementes account information"></Label>
                     </StackLayout>
                 </StackLayout>
                 <StackLayout Orientation="Vertical" Spacing="0"  VerticalOptions="CenterAndExpand" >
-                    <customRenders:CustomButtonRender Style="{StaticResource ButtonStyle}" Text="{i18n:Translate Connect}"></customRenders:CustomButtonRender>
+                    <customRenders:CustomButtonRender Command="{Binding ConnectToCitizenCommand}" Style="{StaticResource ButtonStyle}" Text="{i18n:Translate Connect}"></customRenders:CustomButtonRender>
                 </StackLayout>
                 <StackLayout Orientation="Vertical" Spacing="0" VerticalOptions="End">
                 </StackLayout>
             </StackLayout>
         </OnIdiom.Phone>
-
     </OnIdiom>
 </ContentPage>
