--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/CreateAccountPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/CreateAccountPage.xaml
@@ -16,6 +16,8 @@
                             <Image x:Name="imageElderlyHands" Source="elderlyhands.png" ></Image>
                         </StackLayout>
                         <StackLayout x:Name="secondInnerStack" VerticalOptions="CenterAndExpand" Padding="10">
+                            <Entry Text="{Binding FirstName}" Placeholder="First name" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" />
+                            <Entry Text="{Binding LastName}"  Placeholder="Last name" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" />
                             <Entry Text="{Binding Email}" Placeholder="{i18n:Translate Email}" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" />
                             <Entry Text="{Binding Password}" IsPassword="true"  Placeholder="{i18n:Translate Password}" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" />
                         </StackLayout>
@@ -23,10 +25,16 @@
                     <StackLayout Orientation="Vertical" Spacing="0"  VerticalOptions="CenterAndExpand" >
                         <Label HorizontalTextAlignment="Center" Margin="10" Text="Opret konto som:" Font="Bold"></Label>
                         <Picker WidthRequest="150" HorizontalOptions="Center"  SelectedItem="{Binding SelecteRoleName,Mode=TwoWay}" x:Name="rolePicker"  ItemsSource="{Binding RoleCollection}" Title="Role"  ></Picker>
-                        <customRenders:CustomButtonRender Style="{StaticResource ButtonStyle}" Command="{Binding CreateAccountCommand}" Text="Create Account" />
                     </StackLayout>
                     <StackLayout Orientation="Vertical" Spacing="0" VerticalOptions="End">
-                        <customRenders:CustomButtonRender  Style="{StaticResource CancelButtonStyle}" Text="{i18n:Translate Cancel}"  Command="{Binding CancelCreateAccountCommand}" ></customRenders:CustomButtonRender>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <customRenders:CustomButtonRender  Style="{StaticResource CancelButtonStyle}" Text="{i18n:Translate Cancel}"  Command="{Binding CancelCreateAccountCommand}" Grid.Column="0" ></customRenders:CustomButtonRender>
+                            <customRenders:CustomButtonRender Style="{StaticResource ButtonStyle}" Command="{Binding CreateAccountCommand}" Text="Create Account" Grid.Column="1" />
+                        </Grid>
                     </StackLayout>
                 </StackLayout>
             </OnIdiom.Phone>
