--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/EditAccountInformationPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/EditAccountInformationPage.xaml
@@ -41,13 +41,13 @@
                 <BoxView HeightRequest="1" BackgroundColor="Black" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4"/>
 
                 <Label Text="{i18n:Translate FirstName}" VerticalOptions="Center" Grid.Row="2" Grid.Column="1"></Label>
-                <Entry Text="{Binding User.FirstName}" Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
+                <Entry Text="{Binding UpdatedUser.FirstName}" Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
 
                 <Label Text="{i18n:Translate LastName}" VerticalOptions="Center" Grid.Row="3" Grid.Column="1"></Label>
-                <Entry Text="{Binding User.LastName}" Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
+                <Entry Text="{Binding UpdatedUser.LastName}" Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
 
                 <Label Text="{i18n:Translate Description}" VerticalOptions="Center" Grid.Row="4" Grid.Column="1"></Label>
-                <Editor Text="{Binding User.Description}" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="3"></Editor>
+                <Editor Text="{Binding UpdatedUser.Description}" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="3"></Editor>
 
 
 
@@ -57,10 +57,10 @@
                 <BoxView HeightRequest="1" BackgroundColor="Black" Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="4"/>
 
                 <Label Text="{i18n:Translate Email}" VerticalOptions="Center" Grid.Row="7" Grid.Column="1"></Label>
-                <Entry Text="{Binding User.Email}" Grid.Row="7" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
+                <Entry Text="{Binding UpdatedUser.Email}" Grid.Row="7" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
 
                 <Label Text="{i18n:Translate Phone}" VerticalOptions="Center" Grid.Row="8" Grid.Column="1"></Label>
-                <Entry Text="{Binding User.Phone}" Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
+                <Entry Text="{Binding UpdatedUser.Phone}" Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
 
 
 
@@ -69,7 +69,7 @@
                 <!--This is used as a seperator line in the grid-->
                 <BoxView HeightRequest="1" BackgroundColor="Black" Grid.Row="10" Grid.Column="1" Grid.ColumnSpan="4"/>
 
-                <Image Source="{Binding User.Picture}" Grid.Row="11" Grid.Column="2" Grid.ColumnSpan="2"></Image>
+                <Image Source="{Binding UpdatedUser.Picture}" Grid.Row="11" Grid.Column="2" Grid.ColumnSpan="2"></Image>
 
             </Grid>
             <StackLayout VerticalOptions="Start" Orientation="Vertical">
