--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/ChatPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/ChatPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:model="clr-namespace:DementiaHelper.Model;assembly=DementiaHelper"
              xmlns:extensions="clr-namespace:DementiaHelper.Extensions;assembly=DementiaHelper"
+             xmlns:b="clr-namespace:DementiaHelper.Behaviors;assembly=DementiaHelper"
              xmlns:customRenders="clr-namespace:DementiaHelper.Renders.CustomControlRenders;assembly=DementiaHelper"
              x:Class="DementiaHelper.Pages.ChatPage"
              BackgroundColor="White"
@@ -11,14 +12,25 @@
     <StackLayout Orientation="Vertical" Padding="5, 20, 5, 10">
 
         <ListView SeparatorVisibility="None" HasUnevenRows="True" x:Name="MessageList" ItemsSource="{Binding Messages}" VerticalOptions="FillAndExpand" >
+
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell IsEnabled="False">
-                        <StackLayout HorizontalOptions="StartAndExpand" VerticalOptions="StartAndExpand" Orientation="Vertical">
-                            <Label Text="{Binding Name, StringFormat= '{0:N}: '}"></Label>
-                            <Frame HasShadow="False" BackgroundColor="#dcdcdc" CornerRadius="10">
-                                <Label Text="{Binding Message}"></Label>
-                            </Frame>
+                        <StackLayout Orientation="Horizontal" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+                            <StackLayout  IsVisible="{Binding MessageRecievedIsVisible}"  HorizontalOptions="Start">
+                                <Label Text="{Binding Name, StringFormat= '{0:N}: '}"></Label>
+                                <Frame HasShadow="False" BackgroundColor="#dcdcdc" CornerRadius="10">
+                                    <Label TextColor="Black" Text="{Binding MessageRecieved}" ></Label>
+                                </Frame>
+                            </StackLayout>
+                            <StackLayout HorizontalOptions="CenterAndExpand">
+                            </StackLayout>
+                            <StackLayout IsVisible="{Binding MessageSentIsVisible}"   HorizontalOptions="End">
+                                <Label Text="{Binding Name, StringFormat= '{0:N}: '}"></Label>
+                                <Frame HasShadow="False" BackgroundColor="#00aacc" CornerRadius="10">
+                                    <Label TextColor="White" Text="{Binding MessageSent}" ></Label>
+                                </Frame>
+                            </StackLayout>
                         </StackLayout>
                     </ViewCell>
                 </DataTemplate>
